fix overflow

--- a/src/style.css
+++ b/src/style.css
@@ -524,20 +524,25 @@ News
 
 
 .item{
-    width: 100%;
     display: flex;
     border-radius: 8px;
-    overflow: hidden;
 }
 
-.item img{
+.photo-box{
     width: 194px;
     height: 194px;
+    border-radius: 8px;
+    overflow:hidden;
+}
+
+.poster-photo{
+    width: 100%;
+    height: 100%;
     border-radius: 8px;
     transition: all 0.5s ease-in;
 }
 
-.item img:hover{
+.poster-photo:hover{
     transform: scale(1.1);
 }
 
@@ -608,12 +613,16 @@ News
         align-items: center;
     }
 
-    .item img{
+    .photo-box{
         width: 294px;
     }
     .info{
         margin-top: 10px;
         width: 294px;
+    }
+
+    .dateBox .date{
+        margin-left: 0;
     }
 }
 
@@ -623,7 +632,7 @@ News
         align-items: center;
     }
 
-    .item img{
+    .photo-box{
         width: 294px;
         height: 294px;
     }
@@ -631,6 +640,10 @@ News
     .info{
         margin-top: 10px;
         width: 294px;
+    }
+
+    .dateBox .date{
+        margin-left: 0;
     }
 }
 
